third_party/rust_crates/forks/pin-init/tests/ui/compile-fail/init/early_return.rs
use pin_init::*;

struct Foo {
    a: usize,
}

fn main() {
    let _ = init!(Foo {
        _: {
            return Ok(());
        },
        a: 42,
    });
}
